--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ li {
   text-align: center;
   border: none;
   color: #7342b6;
+  display: none;
 }
 
 .menu__backdrop {
@@ -99,11 +100,25 @@ li {
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0; 
-  z-index: 100; 
+  bottom: 0;
+  z-index: 100;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 300ms ease;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.menu--open .menu__backdrop {
+  display: flex;
+  visibility: visible;
+  opacity: 1;
+}
+
+.menu--open {
+  max-height: 100vh;
+  overflow-y: hidden;
 }
 
 .menu__links {
@@ -113,7 +128,7 @@ li {
 }
 
 .menu__list {
-padding: 32px 0;
+  padding: 32px 0;
 }
 
 .menu__link {
@@ -128,7 +143,6 @@ padding: 32px 0;
   padding: 8px;
   color: white;
 }
-
 
 /*LANDING*/
 
@@ -250,6 +264,7 @@ button:active {
 .highlight__wrapper {
   display: flex;
   z-index: 2;
+  flex-wrap: wrap;
 }
 
 .highlight {
@@ -257,7 +272,7 @@ button:active {
   width: calc(100% / 3);
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   flex-direction: column;
 }
 
@@ -282,6 +297,7 @@ button:active {
 .highlight__subtitle {
   font-size: 20px;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 /* FEATURES */
@@ -362,7 +378,7 @@ footer {
 
 .footer__link,
 .footer__copyright {
-color: #fff
+  color: #fff;
 }
 
 .footer__list {
@@ -371,4 +387,46 @@ color: #fff
 
 .footer__link {
   padding: 0 8px;
-} 
+}
+
+/* SMALL PHONES, TABLETS, LARGE SMARTPHONES */
+@media (max-width: 768px) {
+  .header__description {
+    padding: 0 24px;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+
+  h2 {
+    font-size: 26px;
+  }
+
+button {
+  font-size: 18px;
+}
+
+.book {
+  width: 50%;
+}
+
+}
+
+/* SMALL PHONES, LARGE SMARTPHONES */
+@media (max-width: 550px) {
+  .nav__links {
+    display: none;
+  }
+
+  .btn__menu {
+    display: block;
+  }
+
+  .highlight {
+    width: 100%;
+  }
+  .highlight:not(:last-child) {
+    margin-bottom: 24px;
+  }
+}
